--- a/backend/scaffoldtest_ui.html
+++ b/backend/scaffoldtest_ui.html
@@ -319,9 +319,38 @@
             border-radius: 6px;
             background: #000;
         }
+
+        .version-badge {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 8px 12px;
+            border-radius: 6px;
+            font-size: 11px;
+            font-family: 'Monaco', 'Menlo', monospace;
+            z-index: 9999;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .version-badge .version-label {
+            color: #a0a0a0;
+            margin-right: 5px;
+        }
+
+        .version-badge .version-time {
+            color: #4ade80;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
+    <!-- Version Timestamp Badge -->
+    <div class="version-badge">
+        <span class="version-label">Loaded:</span>
+        <span class="version-time" id="version-timestamp">Loading...</span>
+    </div>
     <div class="container">
         <h1>Agent Processing Test</h1>
 
@@ -764,6 +793,21 @@
         
         console.log('API Base URL:', API_BASE_URL);
         console.log('Is API Gateway:', isApiGateway);
+
+        // Set version timestamp - shows when page was loaded
+        (function() {
+            const now = new Date();
+            const timestamp = now.toLocaleString('en-US', {
+                month: 'short',
+                day: 'numeric',
+                year: 'numeric',
+                hour: '2-digit',
+                minute: '2-digit',
+                second: '2-digit',
+                hour12: true
+            });
+            document.getElementById('version-timestamp').textContent = timestamp;
+        })();
 
         // Agent status tracking
         const agentStatuses = {
